Added the setupdate and setdelete endpoints, very close to being functional

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=FitnessTracker;Username=postgres;Password=kingi123"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=Fitness;Username=postgres;Password=kingi123"
     },
     "Jwt": {
         "Key": "THIS_IS_A_DEV_SECRET_KEY_CHANGE_LATER",
